Fixing page fade out issue, now nav bar stays allways visible

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -147,11 +147,11 @@
   font-weight: 700;
 }
 
-body {
+section {
     opacity: 1;
     transition: 1s opacity;
 }
-body.fade-out {
+.fade-out {
     opacity: 0;
     transition: none;
 }
